# SCan_fw

./: .gitignore  BinaryProtocol.txt  Buffer.h  CHLic.h  CMakeLists.txt  CMakePresets.json  CanBaudrates.xlsx  CanHackerBinary.cpp  CanHackerBinary.h  Debug.h  LedBlink.h  Pins.h  README.md  SCan_boot.qbs  SCan_core.qbs  Sigma pinout.drawio  boot_main.cpp  canhacker.cpp  canhacker.h  dfu-convert.py  main.cpp  timer.cpp  timer.h  toolchain-arm-none-eabi.cmake
.github/workflows/: cmake.yml
Can/: Can.h  candrv.cpp  candrv.h
Lin/: LinBus.cpp  LinBus.h  LinDrv.cpp  LinDrv.h  LinPkt.h
Rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
USB/: cdc.h  cdcacm.cpp  cdcacm.h  dfu.h  dfu_descriptors.c  dfu_descriptors.h  otg_common.h  otg_fs.h  usb.c  usb_control.c  usb_dwc_common.c  usb_dwc_common.h  usb_f107.c  usb_private.h  usb_standard.c  usbd.h  usbstd.h
stm32tpl/: ioregister.h  pin.h  pin_stm32F1xx.h  stm32.h  stm32_flash_f1xx.h  stm32_rcc.h  stm32_tim.h
system/: SysClock.h  exhandler.h  startup.c  stm32.ld  stm32F105xC.ld  stm32F105xC_boot.ld  stm32f105xc.h  stm32f1xx.h  syscalls.c  sysinit.cpp  vectable.c
